// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`-> 1 convo 1`] = `Object {}`;

exports[`-> 1 convo 2`] = `Object {}`;

exports[`-> 2 convos 1`] = `
Object {
  "0": Object {
    "__v": 0,
    "createdAt": "2017-02-01T09:00:00-08:00",
    "id": 0,
    "name": "chat",
  },
}
`;

exports[`-> 3 convos 1`] = `
Object {
  "0": Object {
    "__v": 0,
    "createdAt": "2017-02-01T09:00:00-08:00",
    "id": 0,
    "name": "chat",
  },
  "1": Object {
    "__v": 0,
    "createdAt": "2017-02-01T09:01:00-08:00",
    "id": 1,
    "name": "chat2",
  },
}
`;

exports[`convos actions createConvo should create [CALL_API] action 1`] = `[Function]`;

exports[`convos actions fetchConvos should create [CALL_API] action 1`] = `
Object {
  Symbol(Call API): Object {
    "endpoint": "null/api/convos",
    "method": "GET",
    "types": Array [
      "CONVOS_REQUEST",
      Object {
        "payload": [Function],
        "type": "CONVOS_SUCCESS",
      },
      "CONVOS_FAILURE",
    ],
  },
}
`;

exports[`default 1`] = `Object {}`;

exports[`no payload 1`] = `Object {}`;

exports[`with payload 1`] = `Object {}`;
